# codegen

./: .gitignore
.github/workflows/: release.yaml  test.yaml
codegen/: .mypy.ini  .pre-commit-config.yaml  noxfile.py  pyproject.toml  temporary_model.py
codegen/src/: __init__.py  code_generator.py  entity_generator.py
codegen/tests/: sample.yaml  test_code_generator.py  test_entity_generator.py
codegen/tests/data/: sample.sql  sample.yaml
codegen/tests/data/entities/: user.py  user_entity.py  user_password.py  user_password_entity.py
codegen/tests/data/sample_dir/: other.py  other2.py  user.py  user_create.py  user_update.py
codegen/tests/data/schemas/: other.yaml  user.yaml  user_create.yaml  user_update.yaml
codegen/tests/sample_dir/: user.py  user_create.py  user_update.py
codegen/tests/schemas/: user_create.yaml
