[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modelgen"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datamodel-code-generator>=0.33.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
    "sqlglot[rs]>=27.14.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.1",
    "nox>=2025.5.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "types-pyyaml>=6.0.12.20250822",
]

[tool.ruff.lint]
select = ["I"]
